--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "nodemailer": "^7.0.5",
+    "openai": "^5.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
