--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "ai": "^3.4.0",
+    "@ai-sdk/openai": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -69,7 +71,8 @@
     "@types/react-dom": "^19",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/nodemailer": "^6.4.0"
   },
   "engines": {
     "node": ">=18"
