--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@splinetool/react-spline": "^4.1.0",
     "ai": "^3.4.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
